feat(AG-028): implement new client attempts methods
